<resources>
    <string name="brand_first">Fuori</string>
    <string name="brand_second">Orario</string>
    <string name="subtitle_player">Lavoro individuale</string>
    <string name="subtitle_staff">Vista staff</string>
    <string name="sign_out">Esci</string>
    <string name="tab_shot_log">Diario di tiro</string>
    <string name="tab_plan">Piano</string>
    <string name="tab_plays">Schemi</string>
    <string name="tab_games">Partite</string>
    <string name="tab_team">Squadra</string>

    <string name="save_failed">Salvataggio non riuscito. Riprova tra poco.</string>
    <string name="save_denied">Non hai i permessi per salvare. Chiedi allo staff.</string>
    <string name="load_failed">Caricamento non riuscito.</string>
    <string name="loading">Caricamento</string>
    <string name="in_progress">Operazione in corso</string>
...
    <string name="member_remove">Togli</string>
    <string name="member_remove_confirm">Conferma</string>
    <string name="member_removed">%1$s tolto dalla rosa</string>
    <string name="last_staff">Serve almeno un membro dello staff nella squadra.</string>
    <string name="close">Chiudi</string>

    <string name="shots_log">+ Registra sessione</string>
    <string name="shots_title">Sessioni</string>
    <string name="shots_empty">Nessuna sessione nel periodo. Registra la prima dopo il prossimo allenamento.</string>
    <string name="period">Periodo</string>
    <string name="period_7">7 giorni</string>
    <string name="period_30">30 giorni</string>
    <string name="period_season">Stagione</string>
...
